#1103 Decouple activator and component lookup from early initialization